--- a/RASD/Example+Of+Latex+Doc/main.tex
+++ b/RASD/Example+Of+Latex+Doc/main.tex
@@ -1,3 +1,4 @@
+
 \input{commandsFile}
 
 \begin{document}
@@ -13,7 +14,7 @@
 \centering
 \begin{tabu} to \textwidth { X[1.3,r,p] X[1.7,l,p] }
 \textcolor{Blue}
-{\textbf{\small{Travlendar+ project YOUR NAMES}}} & \includegraphics[scale=0.5]{Images/PolimiLogo}
+{\textbf{\small{Gabriele}}} & \includegraphics[scale=0.5]{Images/PolimiLogo}
 \end{tabu}
 \end{table}}~\\ [7cm]
 
