--- a/RASD/rasd.tex
+++ b/RASD/rasd.tex
@@ -22,6 +22,10 @@
 \usepackage{alloy}
 \usepackage{graphicx}
 
+% Some utilities\ldots
+\input{util/highlight}
+\input{util/abbrev}
+
 
 \titleformat{\paragraph}
 {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
@@ -59,14 +63,14 @@
 \pagenumbering{arabic}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
-\newpage
-\addcontentsline{toc}{section}{Table of Contents}
-\tableofcontents
-\newpage
-\addcontentsline{toc}{section}{List of Figures}
-\listoffigures
-\addcontentsline{toc}{section}{List of Tables}
-\listoftables
+%\newpage
+%\addcontentsline{toc}{section}{Table of Contents}
+%\tableofcontents
+%\newpage
+%\addcontentsline{toc}{section}{List of Figures}
+%\listoffigures
+%\addcontentsline{toc}{section}{List of Tables}
+%\listoftables
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
