--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -3,11 +3,11 @@ TODO
 Traditional classroom teaching focuses heavily on theory and concepts, without providing sufficient opportunities for students to gain hands-on coding experience.
 Additionally, the student-instructor relationship is usually limited to formal lectures and exams, missing some kind of continuous evaluation, which is essential to stimulate learning.
 
-CodeKataBattle aims to fill these gaps by facilitating competitive programming challenges that motivate students to put concepts into practice. The aim of the product is to provide an alternative to evaluate students with respect to their coding skills in a more enjoyable way: this is achieved by allowing educators to create tournaments in which students can partecipate and compete. By integrating with static analysis tools, the automated scoring system provides reliable evaluation so students can measure their improvements. By collaborating in teams, they also learn key skills like communication and source control. Indeed, partecipating to battles, students will gain experience in using GitHub as source control system.
+CodeKataBattle aims to fill these gaps by facilitating competitive programming challenges that motivate students to put concepts into practice. The aim of the product is to provide an alternative to evaluate students with respect to their coding skills in a more enjoyable way: this is achieved by allowing educators to create tournaments in which students can partecipate and compete. Through integration with static analysis tools, the automated scoring system provides reliable evaluation so students can measure their improvements. By collaborating in teams, they also learn key skills like communication and source control. Indeed, partecipating to battles, students will gain experience in using GitHub as source control system.
 
  These kind of evaluation also teaches how the test-first approach can be useful when it comes to developing a new piece of software.
 
- For instructors, CodeKataBattle enables closer mentorship driven by qualitative code reviews, by including optional manual evaluation. Finally, educators will have the opportunity to enhance their code review skills while increasing the engagement with their students. Overall, the platform creates a virtuous cycle of learning powered by practice, feedback and community.
+ For instructors, CodeKataBattle enables closer mentorship driven by qualitative code reviews, by including optional manual evaluation. In this way, educators will have the opportunity to enhance their code review skills while increasing the engagement with their students. Overall, the platform creates a virtuous cycle of learning powered by practice, feedback and community.
 
  %---------------------------------
  \subsubsection{Goals}
@@ -15,11 +15,11 @@ CodeKataBattle aims to fill these gaps by facilitating competitive programming c
  The main objectives of our system are the following:
  \begin{enumerate}[label=$\bullet$ \textbf{G\arabic*:}]
      \item \textbf{ Allow students to participate to programming challenges in teams}\\This is the main goal of the system. Students will be able to form teams to partecipate to Code Kata Battles and collaborate through GitHub.
-     \item \textbf { Allow educators to create tournaments}\\Only educators are allowed to create tournaments, which are composed by a non predefined number of battles. Once a new tournament is created, all the students of the platform are notified and can partecipate to it.
-     \item \textbf{ Allow educators to create programming challenges}\\The creator of the tournament (or allowed educators) can create programming challenges (Code Kata Battles) within the context of a tournament.
-     \item \textbf{ Let the system to automatically score and rank students’ submissions}\\Students submissions are automatically analyzed and ranked by the system, combining functional aspects, timeliness and quality level of sources. Functional aspects are measured in terms of number of unit test cases passed out of all test cases. Timeliness instead is measured in terms of elapsed time passed since the start of the battle. Finally, quality level of sources is measured in terms of code quality, whose aspects can be selected by the educator at battle creation time, and is computed by integrating with static analysis tools.
-     \item \textbf{ Allow educators to manually inspect and review students’ submissions}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
-     \item \textbf{ Allow students to track their performance}\\Teams will we able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. In this way, the student can track his/her performance during the tournament as well.
+     \item \textbf { Allow educators to create tournaments}\\Only educators are allowed to create tournaments, which are composed by a non predefined number of battles. Whenever a new tournament is created, all the students of the platform are notified and can partecipate to it. After the creation of a tournament, the educator can add collaborators that will help him in the management of the tournament.
+     \item \textbf{ Allow educators to create programming challenges}\\The creator of the tournament (or invited collaborators) can create programming challenges (Code Kata Battles) within the context of a tournament.
+     \item \textbf{ Let the system to automatically analyze and rank submissions of students}\\Students submissions are automatically analyzed and ranked by the system, combining functional aspects, timeliness and quality level of sources. Functional aspects are measured in terms of number of unit test cases passed out of all test cases. Timeliness instead is measured in terms of elapsed time passed since the start of the battle. Finally, quality level of sources is measured in terms of code quality, whose aspects can be selected by the educator at battle creation time, and is computed by integrating with static analysis tools.
+     \item \textbf{ Allow educators to manually inspect and review submissions of students}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
+     \item \textbf{ Allow students to track their performance}\\Teams will we able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. In this way, the student can track his performance during the tournament as well.
  \end{enumerate}
 
  %--------------------------------------
