small fixes in scope

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -36,13 +36,13 @@ Once the students start developing their solutions, the platform will also start
 \begin{itemize}
     \item {Mandatory \textbf{automated evaluation}; it includes:}
     \begin{itemize}
-        \item {functional aspects measured in terms of number of test cases that are correctly solved}
+        \item {functional aspects measured in terms of number of test cases that are correctly solved; unit test cases are provided by the educator when uploading the project files related to the battle}
         \item {timeliness, measured in terms of time passed between the start of the battle and the last commit}
         \item {quality level of the sources, extracted through  \textbf{external static analysis tools} that consider multiple aspects selected by the educator at battle creation time (e.g. security, reliability, and maintainability)}
     \end{itemize} 
     \item {Optional \textbf{manual evaluation}: personal score assigned by the educator, who checks and evaluates the work done by students}
 \end{itemize}
-Lastly, once the deadline for the submission of solutions expires (and after the manual evaluation has been performed in case it was expected), the system assigns to every team that participated in the battle an integer score between 0 and 100 that will concur to the definition of the personal score of each user in the context of the tournament the battle belongs to, in addition to the teams’ rank of the battle. At any point in time every user subscribed to CKB can see the list of ongoing tournaments and the rank of enrolled users.
+Lastly, once the deadline for the submission of solutions expires (and after the manual evaluation has been performed in case it was expected), the system assigns to every team that participated in the battle an integer score between 0 and 100. This will concur both to the team's battle rank and to the personal score of each user in the context of the tournament the battle belongs to. At any point in time every user subscribed to CKB can see the list of ongoing tournaments and the rank of enrolled users.
 For a smoother experience, students will receive email notifications about the most important events, such as the availability of a new tournament and battle, or the publication of the final rank of a battle.
 \subsubsection{Phenomena}
 
