--- a/RASD/rasd.tex
+++ b/RASD/rasd.tex
@@ -46,7 +46,7 @@
     {\Large {Tommaso Capacci \quad Gabriele Ginestroni}\par}
     \vfill
     {\large Professor\par
-        Elisabetta \textsc{De Nitto}}
+        Elisabetta \textsc{Di Nitto}}
     \vfill
     {\large \textbf{Version 1.2}\\ \today \par}
 \end{titlepage}
