--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -17,7 +17,7 @@ CodeKataBattle aims to fill these gaps by facilitating competitive programming c
      \item \textbf { Allow educators to create tournaments}\\Only educators are allowed to create tournaments, which are composed by a non predefined number of battles. Whenever a new tournament is created, all the students of the platform are notified and can partecipate to it. After the creation of a tournament, the educator can add collaborators that will help him in the management of the tournament.
      \item \textbf{ Allow educators to create programming challenges}\\The creator of the tournament (or invited collaborators) can create programming challenges (Code Kata Battles) within the context of a tournament.
      \item \textbf{ Let the system to automatically analyze and rank submissions of students}\\Students submissions are automatically analyzed and ranked by the system, combining functional aspects, timeliness and quality level of sources. Functional aspects are measured in terms of number of unit test cases passed out of all test cases. Timeliness instead is measured in terms of elapsed time passed since the start of the battle. Finally, quality level of sources is measured in terms of code quality, whose aspects can be selected by the educator at battle creation time, and is computed by integrating with static analysis tools.
-     \item \textbf{ Allow educators to manually inspect and review submissions of students}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
+     \item \textbf{ Allow educators to manually inspect and review submissions of students}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator who created the battle, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
      \item \textbf{ Allow students to track their performance}\\Teams will we able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. In this way, the student can track his performance during the tournament as well.
  \end{enumerate}
 \newpage
@@ -88,10 +88,35 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
     \caption{phenomena table}
 \end{table}
 \newpage
+\subsection{Definitions, Acronyms, Abbreviations}
 \subsubsection{Definitions}
-\subsubsection{Acronyms}
-\subsubsection{Abbreviations}
+\begin{itemize}
+    \item {\textbf{User:} anyone that has registered to the platform}
+    \item {\textbf{Student:} the first kind of users and, basically, the people this product is designed for. Their objective is to submit solutions to battles}
+    \item {\textbf{Team:} students can decide to group up and form a team to partecipate to a battle. The score assigned to the submission of a team will be assigned also to each one of its members}
+    \item {\textbf{Team leader:} whoever creates a team for a battle. He is in charge of forking the GitHub repository of the battle and adding his team mates as GitHub collaborators. He also has to properly set-up the GitHub Actions workflow that will be used to automatically evaluate the submissions of the team}
+    \item {\textbf{Educator:} the second kind of users. They create tournaments, set-up battles, and eventually, evaluate the solutions that teams of students have submitted during the challenge}
+    \item {\textbf{Tournament:} collection of coding exercises (battles) about specific topics of a subject. Interested students can subscribe to it and participate to its battles as soon as they are published}
+    \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
+    \item {\textbf{Tournament collaborator:} other educator that is added by the tournament creator to help him in the management of the tournament. He can create battles and evaluate their submissions}
+    \item {\textbf{GitHub collaborator:} person who is granted the access to a GitHub repository with write permission}
+    \item {\textbf{Test cases:} each battle is associated with a set of test cases, which  are input-output value pairs that describe the correct behavior of the ideal solution}
+    \item {\textbf{Static analysis:} is the analysis of programs performed without executing them, usually achieved by applying formal methods directly to the source code. In the context of the platform this kind of analysis is used to extract additional information about the level of security, reliability and maintainability of a battle submission}
+    \item {\textbf{Functional analysis:} measures the correctness of a solution in terms of passed test cases}
+    \item {\textbf{Timeliness:} measures the time passed between the start of the battle and the last commit of the submission}
+    \item {\textbf{Score:} to each solution is assigned a score which is computed taking into account timeliness, functional and static analysis and, eventually, manual score assigned by the educator that created the challenge. The score is a natural number between 0 and 100 (the higher the better)}
+    \item {\textbf{Rank:} at the end of each battle, the platform updates the personal tournament score of each student. Specifically, the score is computed as the sum of all the battles scores received in that tournament. This overall score is used to fill out a ranking of all the students participating to the tournament which is accessible by any time and by any user subscribed to the platform}
+    \item {\textbf{Notification:} it's an  email alert that is sent to users to inform them that a certain event occurred such as the creation of a new tournament and battle or the publication of the final rank of a battle}
 
+\end{itemize}
+\subsubsection{Acronyms}
+\begin{itemize}
+    \item {\textbf{ID:}\\blabla}
+\end{itemize}
+\subsubsection{Abbreviations}
+\begin{itemize}
+    \item {\textbf{ID:}\\blabla}
+\end{itemize}
 \subsection{Revision History}
 
 \subsection{Reference Documents}
