updated document structure

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -137,10 +137,9 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
 
 \subsection{Document Structure}
 \begin{itemize}
-    \item {\textbf{Section 1: Introduction}\\This section offers a brief overview of the product and its domain. \\It also contains the list of definitions, acronyms and abbreviations that could be found in this document. \\Finally, there are
-    the list of definitions, acronyms and abbreviations that could be found in this document.}
-    \item {\textbf{Section 2: Overall Description}\\The second chapter offers a more detailed description of the product domain through state machine diagrams and UML class diagram. It contains also the hardware and the software costraints of the system. Finally, there is an overview of
-     all the product features and the actors they are built for. Some scenarios are included to better understand the expected functionalities.}
+    \item {\textbf{Section 1: Introduction}\\This section offers a brief overview of the product and its purpose. It also contains the list of definitions, acronyms and abbreviations that could be found in this document.}
+    \item {\textbf{Section 2: Overall Description}\\The second chapter contains some scenarios to better understand the expected functionalities and offers a more detailed description of the product domain through state machine diagrams and UML class diagram. It contains also the hardware and the software costraints of the system. Finally, there is an overview of
+     all the product features and the actors they are built for. }
     \item {\textbf{Section 3: Specific Requirements}\\This section contains a description of functional requirement through some use cases and activity diagrams.}
     \item {\textbf{Section 4: Formal Analysis through Alloy}\\The fourth chapter is a formal analysis of the model, made through the Alloy, including a graphic
     representation of it obtained from Alloy Tool.
