updated uml and removed team leader role

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -94,7 +94,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
     \item {\textbf{User:} anyone that has registered to the platform}
     \item {\textbf{Student:} the first kind of users and, basically, the people this product is designed for. Their objective is to submit solutions to battles}
     \item {\textbf{Team:} students can decide to group up and form a team to partecipate to a battle. The score assigned to the submission of a team will be assigned also to each one of its members}
-    \item {\textbf{Team leader:} whoever creates a team for a battle. He is in charge of forking the GitHub repository of the battle and adding his teammates as GitHub collaborators. He also has to properly set-up the GitHub Actions workflow that will be used to automatically evaluate the submissions of the team}
+    \item {\textbf{Team leader:} whoever creates a team for a battle}
     \item {\textbf{Educator:} the second kind of users. They create tournaments, set-up battles, and eventually, evaluate the solutions that teams of students have submitted during the challenge}
     \item {\textbf{Tournament:} collection of coding exercises (battles) about specific topics of a subject. Interested students can subscribe to it and participate to its battles as soon as they are published}
     \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
