--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -11,7 +11,7 @@
 
 \subsubsection{Domain Class diagram}
 \begin{figure}[h]
-    \includegraphics[scale=0.4]{Diagrams/uml.jpg}
+    \includegraphics[scale=0.4]{Diagrams/uml_v2.jpg}
     \caption{Domain-level UML diagram}
     \label{class_diagram}
 \end{figure}
